classDiagram
    direction LR

    class User {
        <<Entity>>
        ...
    }
    class Issue {
        <<Entity>>
        ...
    }
    class Comment {
        <<Entity>>
        ...
    }

    User "1" <.. "*" Issue : created by
    User "1" <.. "*" Comment : created by
    Issue "1" <.. "*" Comment : contained in